# location-ai-platform

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  init.sql  pyproject.toml  run.sh
.github/workflows/: ci.yml
app/: __init__.py  config.py  db_init.py  logging.py  main.py
app/models/: __init__.py  database.py  location.py  url.py
app/routers/: __init__.py  ai_chat.py  locations.py  streaming.py  urls.py
app/services/: __init__.py  ai_service.py  geo_service.py  url_service.py
app/websocket/: __init__.py  chat_handler.py
docs/: api.md  deployment.md
tests/: __init__.py  conftest.py  test_ai_service.py  test_geo_service.py  test_main.py  test_url_service.py
